# pharmacy-reference

./: .env  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose-local.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
api_service/: Dockerfile  openapi.yaml  pyproject.toml  requirements.txt  settings.py  uwsgi.ini
api_service/api_service/: app.py  openapi.yaml  settings.py
api_service/api_service/endpoints/: auth.py  drugs.py  summarizations.py  tokens.py  users.py
api_service/api_service/endpoints/shopping_lists/: __init__.py  drugs.py
api_service/api_service/endpoints/summarizations/: __init__.py  meta.py  text.py
api_service/api_service/models/: __init__.py  base.py  drugs.py  shopping_lists.py  summarizations.py  users.py  utils.py
api_service/endpoints/: __init__.py  tokens.py  users.py
api_service/models/: base.py  users.py
datafeed_service/: Dockerfile  main.py
docs/: diagram.drawio
frontend_service/: Dockerfile  angular.json  package-lock.json  package.json  tsconfig.json
frontend_service/pharmacy-reference/: README.md
frontend_service/pharmacy-reference/src/: index.html
frontend_service/src/: index.html  styles.scss
mht_service/: Dockerfile  main.py  uwsgi.ini
nginx_service/: Dockerfile
nginx_service/block_configs/: pharmacy_reference.conf
nginx_service/block_configs_local/: pharmacy_reference.conf
nginx_service/block_confings/: pharmacy_reference.conf
text_summarizer_service/: .dockerignore  Dockerfile  api.py  main.py  pubmed.py  requirements.txt  settings.py  summarizer.py
text_summarizer_service/notebooks/: abstract_summarization.ipynb  bigbird_pegasus_summarization.ipynb  bigbird_summarization.ipynb  textrank_summarization.ipynb
(+53 files in other folders)
