[tool.poetry]
name = "pharmacy_referency"
version = "0.0.1"
description = ""
authors = ["gurland <stas.gurland@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]

upload_to_pypi = false
commit_subject = "chore(release): {version} [skip actions]"
