[tool.poetry]
name = "api_service"
version = "0.1.0"
description = ""
authors = ["gurland <stas.gurland@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
peewee = "^3.15.3"
connexion = "^2.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
